2008-07-26  Neil Roberts  <neil@o-hand.com>

	* extra/mkmethod.el (mkmethod): Include lines that have been split
	into two when searching for the last rb_define_method call. If the
	new rb_define_method line is longer than 80 characters then split
	it into two. Include extra newlines in the method definition.

2008-07-25  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcltscore.c: Bindings for ClutterScore

	* clutter/rbclutter.c (Init_clutter): Call rbclt_score_init

	* clutter/extconf.rb: Added rbcltscore.o

2008-07-25  Neil Roberts  <neil@o-hand.com>

	* examples/thumbnailer.rb: Update to 0.8 API. Specify the size of
	the pixbuf while loading instead of scaling afterwards so that SVG
	images will look nice.

2008-07-25  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcltscript.c: Bindings for ClutterScript

	* examples/test-script.rb: Example program for ClutterScript

	* clutter/extconf.rb: Added rbcltscript.o

	* clutter/rbclutter.h: 
	* clutter/rbclutter.c (Init_clutter): Call rbclt_script_init and
	define a wrapper for the missing GConnectFlags from GLib

2008-07-23  Neil Roberts  <neil@o-hand.com>

	* clutter/rbclttexture.c (rbclt_texture_init): Renamed
	Clutter::Texture::Error to Clutter::TextureError to match the rest
	of the error classes.

2008-07-23  Neil Roberts  <neil@o-hand.com>

	* clutter/rbclttexture.c: Update to 0.8 so that it doesn't include
	anything related to pixbufs and removes the properties for
	accessing the tiles. (Tiles can now be accessed from the Cogl
	texture)

	* clutter/rbcltactor.h: 
	* clutter/rbcltactor.c: Make the actor class a public variable.

	* clutter/extconf.rb: gdk-pixbuf is no longer required

2008-07-23  Neil Roberts  <neil@o-hand.com>

	* README: Updated

2008-07-23  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcltcontainer.c: Added a wrapper for
	Clutter::Container#get_child_meta

	* clutter/rbcltchildmeta.c: Added a wrapper for Clutter::ChildMeta

	* clutter/extconf.rb: Added rbcltchildmeta.o
