@@ -1,5 +1,9 @@
 2008-07-26  Neil Roberts  <neil@o-hand.com>
 
+	* clutter/rbclttimeline.c: Update to include the marker functions.
+
+2008-07-26  Neil Roberts  <neil@o-hand.com>
+
 	* extra/mkmethod.el (mkmethod): Include lines that have been split
 	into two when searching for the last rb_define_method call. If the
 	new rb_define_method line is longer than 80 characters then split
